P5 E-Learning/force-app/main/default/objects/Unit_User_History__c/fields/Module_User_History__c.field-meta.xml
<CustomField>
    <fullName>Module_User_History__c</fullName>
    <label>Module_User_History</label>
    <referenceTo>Module_User_History__c</referenceTo>
    <relationshipLabel>Units_Users_Historys</relationshipLabel>
    <relationshipName>Units_Users_Historys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>