P5 E-Learning/force-app/main/default/objects/Unit_User_History__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Units_Users_Historys</relationshipLabel>
    <relationshipName>Units_Users_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>